--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,21 @@
     <section>
       <div class="container">
         <div class="d-flex">
+          {% for most_popular_post in most_popular_posts %}
           <div class="flex-fill" style="margin-right: 30px;">
+            <div class="card blog__slide text-center">
+              <div class="blog__slide__img">
+                <img class="card-img rounded-0" src="{% static most_popular_post.image_url %}" alt="">
+                <!-- <img class="card-img rounded-0" src="{% static {{most_popular_post.image_url}}' %}" alt=""> -->
+              </div>
+              <div class="blog__slide__content">
+                <h3><a href="#">{{most_popular_post.title}}</a></h3>
+                <p>{{most_popular_post.published_at}}</p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          <!-- <div class="flex-fill" style="margin-right: 30px;">
             <div class="card blog__slide text-center">
               <div class="blog__slide__img">
                 <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide1.png' %}" alt="">
@@ -72,7 +86,6 @@
               </div>
             </div>
           </div>
-
           <div class="flex-fill" style="margin-right: 30px;">
             <div class="card blog__slide text-center">
               <div class="blog__slide__img">
@@ -95,7 +108,7 @@
                 <p>2 days ago</p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
