--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-8">
             <div class="main_blog_details">
-              {% if fresh_post.image_url %}
+              {% if post.image_url %}
                 <img class="img-fluid" src="{% static post.image_url %}" alt="">
               {% else %}
                 <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
@@ -119,38 +119,6 @@
                         </div>
                     </div>
                     {% endfor %}
-                    <!-- <div class="comment-list">
-                        <div class="single-comment justify-content-between d-flex">
-                            <div class="user justify-content-between d-flex">
-                                <div class="desc">
-                                    <h5><a href="#">Maria Luna</a></h5>
-                                    <p class="date">December 4, 2017 at 3:12 pm </p>
-                                    <p class="comment">
-                                        Never say goodbye till the end comes!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="reply-btn">
-                                    <a href="" class="btn-reply text-uppercase">reply</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="comment-list">
-                        <div class="single-comment justify-content-between d-flex">
-                            <div class="user justify-content-between d-flex">
-                                <div class="desc">
-                                    <h5><a href="#">Ina Hayes</a></h5>
-                                    <p class="date">December 4, 2017 at 3:12 pm </p>
-                                    <p class="comment">
-                                        Never say goodbye till the end comes!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="reply-btn">
-                                    <a href="" class="btn-reply text-uppercase">reply</a>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
         </div>
 
