--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% load static %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -35,14 +37,14 @@
               <li><a href="#"><i class="ti-instagram"></i></a></li>
               <li><a href="#"><i class="ti-skype"></i></a></li>
             </ul>
-          </div> 
+          </div>
         </div>
       </nav>
     </div>
   </header>
   <!--================Header Menu Area =================-->
-  
-  <!--================ Hero sm banner start =================-->  
+  {% block content %}
+  <!--================ Hero sm banner start =================-->
   <section class="mb-30px">
     <div class="container">
       <div class="hero-banner hero-banner--sm">
@@ -58,7 +60,7 @@
       </div>
     </div>
   </section>
-  <!--================ Hero sm banner end =================-->  
+  <!--================ Hero sm banner end =================-->
 
 
   <!-- ================ contact section start ================= -->
@@ -122,9 +124,7 @@
     </div>
   </section>
 	<!-- ================ contact section end ================= -->
-
-  
-
+{% endblock %}
 
   <!--================ Start Footer Area =================-->
   <footer class="footer-area section-padding">
