--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,9 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Remake Barber - Contact</title>
+  {% block title %}Sensive Blog - Contact{% endblock %}
 	<link rel="icon" href="img/favicon.png" type="image/png">
-
 
   <link rel="stylesheet" href="/home/olga/Desktop/Мои проекты/блог/styles.min.css">
 </head>
