--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sensive Blog - Home</title>
+  {% block title %}Sensive Blog - Home{% endblock %}
   <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-
   <link rel="stylesheet" href="{% static 'styles.min.css' %}">
 </head>
 <body>
