--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -66,7 +66,7 @@
           <div class="col-lg-8">
             <div class="main_blog_details">
               {% if post.image_url %}
-                <img class="img-fluid" src="{% static post.image_url %}" alt="">
+                <img class="img-fluid" src="{{post.image_url}}" alt="">
               {% else %}
                 <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
               {% endif %}
